<resources>
    <string name="app_name">DevNetworkTool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="tcp_client">TCP client</string>
    <string name="ping">Ping</string>
    <string name="ping_is_empty">Ping is empty</string>
    <string name="packet_lost">Packet lost</string>
    <string name="chart">Chart</string>
    <string name="stats">Stats</string>
    <string name="raw_data">Raw</string>
    <string name="udp_client">UDP client</string>
    <string name="exit">Shutdown and exit</string>
    <string name="rest_client">REST client</string>
    <string name="tcp_server">TCP server</string>
    <string name="udp_server">UDP server</string>
    <string name="history">History</string>
    <string name="add_new">Add new</string>
    <string name="name">Name</string>
    <string name="ip_address_url">IP address / URL</string>
    <string name="port">Port</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="send">Send</string>
    <string name="request">Request</string>
    <string name="invalid_ip_address">IP address is invalid</string>
    <string name="invalid_port">Port is invalid</string>
    <string name="string_is_empty">String is empty</string>
    <string name="delete">Delete</string>
    <string name="edit">Apply</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="add">Add</string>
    <string name="connection_error">Cannot connect to remote server</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="from">From</string>
    <string name="time_ms">time =  %1$d ms</string>
    <string name="ms">ms</string>
    <string name="value_ms">%1$d ms</string>
    <string name="alert_close_connection">Connection will be closed. Are you sure?</string>
    <string name="connection_service">DevNetworkTool connection service</string>
    <string name="tcp_connected_description">TCP connection is currently active</string>
    <string name="udp_connected_description">UDP connection is currently active</string>
    <string name="empty_service_description">Service is active</string>
    <string name="response">Response</string>
    <string name="header_key">Header key</string>
    <string name="header_value">Header value</string>
    <string name="request_key">Request key</string>
    <string name="request_value">Request value</string>
    <string name="custom_header">Custom header</string>
    <string name="custom_value">Custom value</string>
    <string name="sended">Sended</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="average">Average</string>
    <string name="general">General</string>
    <string name="ttl">TTL</string>
    <string name="ip_address">IP address</string>
    <string name="url">URL</string>
    <string name="method">Method</string>
    <string name="add_headers">Add headers</string>
    <string name="add_request">Add request</string>
    <string name="plus">"+"</string>
    <string name="headers">Headers</string>
    <string name="body">Body</string>
    <string name="error">Error</string>
    <string name="response_code"><Data><![CDATA[ <b>Response code</b> ]]> </Data></string>
    <string name="response_length"><Data><![CDATA[ <b>Response length</b> ]]> </Data></string>
    <string name="response_time"><Data><![CDATA[ <b>Response time</b> ]]> </Data></string>
    <string name="open_as">Open as</string>
    <string name="json">JSON</string>
    <string name="xml">XML</string>
    <string name="html">HTML</string>
    <string name="undefined">Undefined type</string>
    <string name="settings">Settings</string>
    <string name="encoding">Encoding</string>
    <string name="timeout">Timeout</string>
    <string name="time_unit">Time unit</string>
    <string name="timeout_description">Interrupt request after specific time</string>
    <string name="ssl_check">Disable SSL check</string>
    <string name="ssl_check_description">Use for sites with invalid certificates</string>
    <string name="rest">REST</string>
    <string name="tcp_udp">TCP/UDP</string>
    <string name="last_usage">Last usage: %1$s</string>
    <string name="list_is_empty">List is empty </string>
    <string name="you_didnt_start_work_yes">You did not start yet</string>
    <string name="no_error_description">No error description</string>

    <!-- end of default fill -->

    <string-array name="methods">
        <item>GET</item>
        <item>POST</item>
        <item>PUT</item>
        <item>DELETE</item>
        <item>HEAD</item>
        <item>OPTIONS</item>
        <item>PATCH</item>
    </string-array>

    <string-array name="encodings">
        <item>UTF_8</item>
        <item>US_ASCII</item>
        <item>ISO_8859_1</item>
        <item>UTF_16</item>
        <item>UTF_16BE</item>
        <item>UTF_16LE</item>
    </string-array>

</resources>
