<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rest"
        android:icon="@drawable/rest_client"
        android:title="@string/rest_client" />

    <item
        android:id="@+id/tcp_client"
        android:icon="@drawable/tcp_client"
        android:title="@string/tcp_client" />
    <item
    android:id="@+id/udp_client"
    android:icon="@drawable/udp_client"
    android:title="@string/udp_client" />

    <item
        android:id="@+id/ping"
        android:icon="@drawable/ping_icon"
        android:title="@string/ping" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/exit"
        android:icon="@drawable/exit"
        android:title="@string/exit" />
</menu>
