<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectionNameEditText"
        android:hint="@string/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/connectionIpAddressEditText"
        android:hint="@string/ip_address"
        android:layout_below="@+id/connectionNameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/connectionPortEditText"
        android:hint="@string/port"
        android:layout_below="@+id/connectionIpAddressEditText"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/connectionIpAddressEditText"
        android:layout_alignEnd="@+id/connectionIpAddressEditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:background="@drawable/button_states"
        android:id="@+id/connectionStartButton"
        android:layout_below="@+id/connectionPortEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_alignRight="@+id/connectionPortEditText"
        android:layout_alignEnd="@+id/connectionPortEditText" />
</RelativeLayout>
