<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/urlTextInoutLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextIpAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address_url" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:hint="@string/port" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>