<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">


    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/slidingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoDragView="@+id/dragView"
        sothree:umanoOverlay="true"
        sothree:umanoPanelHeight="90dp"
        sothree:umanoScrollableView="@+id/recyclerViewInputs"
        sothree:umanoShadowHeight="0dp">


        <!-- MAIN CONTENT -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="50dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerViewMessages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                />
        </RelativeLayout>

        <!-- SLIDING LAYOUT -->
        <LinearLayout
            android:id="@+id/dragView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/slidingView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewArrow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_keyboard_arrow_down_black_36dp" />

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="6dp"
                card_view:cardMaxElevation="6dp"
                card_view:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="#ffffff"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/messageEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/request"
                            android:maxLines="1"
                            android:layout_gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:paddingLeft="10dp"
                            />

                        <ImageView
                            android:id="@+id/buttonSend"
                            android:layout_width="30dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            app:srcCompat="@drawable/ic_send" />

                    </LinearLayout>

                    <View
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="#ffffff">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recyclerViewInputs"
                                android:layout_width="match_parent"
                                android:layout_height="0dip"
                                android:layout_weight="1" />

                            <Button
                                android:id="@+id/buttonAdd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/button_states_flat"
                                android:text="@string/add"
                                android:textColor="@color/white" />
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>

    <RelativeLayout
        android:id="@+id/errorRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/connection_error"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loadingRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />

    </RelativeLayout>


</RelativeLayout>